# rag_pdfs

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  app_entrypoint.py  requirements.txt
app/scenario/faiss_index/: index.faiss
notebooks/: assistant.ipynb  cohereservice.ipynb  config.ipynb  documentservice.ipynb  faiss.ipynb  loadpdfs.ipynb  retrievers.ipynb  retrieverservice.ipynb  textsplitting.ipynb  vectorstoreservice.ipynb  🧪Components.ipynb  🧪Load_Pdf.ipynb  🧪Mistral_GPT4All.ipynb  🧪Mistral_LangChain.ipynb  🧪TextSpliters.ipynb  🧪create_index_chroma.ipynb  🧪create_index_deep_lake.ipynb  🧪create_index_faiss.ipynb
src/: assistant.py  cohereservice.py  documentservice.py  prompts.py  retrieverservice.py  vectorstoreservice.py
src/pdfrag/: assistant.py  configuration.py  data_models.py  doc_loader.py  llm_instances.py  prompts.py  retriever.py  vector_store.py
src/pdfrag/utils/: logger.py  system.py
src/rag/: assistant.py  prompts.py  retrieverservice.py
