[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.1.6"
gradio = "^4.19.1"
cohere = "^4.47"
python-dotenv = "^1.0.1"
langchain-community = "0.0.19"
faiss-cpu = "^1.7.4"
pypdf = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
